# proyecto-compi

./: .gitignore  CMakeLists.txt  INFORME_TECNICO.md  ast.cpp  ast.h  environment.h  main.cpp  parser.cpp  parser.h  run_tests.py  scanner.cpp  scanner.h  token.cpp  token.h  visitor.cpp  visitor.h
bonus-app/: README.md  server.py
bonus-app/static/: app.js  ast.js  examples.js  highlight.js  index.html  styles.css
inputs/: input1.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt
